@@ -137,6 +137,7 @@ call_user_func(function () {
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Scalar/FilePath.php';
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Scalar/Json.php';
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Scalar/Xml.php';
+        include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Scalar/TimeStamp.php';
 
         include_once KREXX_DIR . 'src/Analyse/Model/ConnectorService.php';
         include_once KREXX_DIR . 'src/Analyse/Model/Callback.php';
