@@ -1,5 +1,6 @@
 4.2.0
 - Added microtime analysis to the float routing.
+- Added microtime analysis to the string scalar analysis.
 
 4.1.2
 - Change: Do not display an empty array, when there are no
